--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/game_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_notifications" />
+        android:text="@string/title_game" />
+
 
 </LinearLayout>
