--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,78 +5,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Login"
+    tools:context=".activity.Login"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
-            android:id="@+id/signin"
+            android:id="@+id/retrofit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="50dp"
             android:gravity="center"
-            android:text="Se connecter"
+            android:text="@string/se_connecter"
             android:textColor="@color/white"
             android:textSize="35dp"
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:layout_below="@id/signin"
-            android:background="#30ffffff"
-            android:hint="Email"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:layout_below="@id/retrofit"
             android:layout_margin="10dp"
-            android:padding="20dp"
+            android:background="#30ffffff"
             android:drawableLeft="@drawable/ic_baseline_person_outline_24"
             android:drawablePadding="20dp"
-            android:inputType="textEmailAddress"/>
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/password"
-            android:layout_below="@id/username"
-            android:background="#30ffffff"
-            android:hint="Mot de Passe"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:layout_below="@id/mail"
             android:layout_margin="10dp"
-            android:padding="20dp"
+            android:background="#30ffffff"
             android:drawableLeft="@drawable/ic_baseline_info_24"
             android:drawablePadding="20dp"
-            android:inputType="textPassword"/>
+            android:hint="Mots de Passe"
+            android:inputType="textPassword"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnconnect"
+            android:layout_width="177dp"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:background="@color/design_default_color_primary"
+            android:text="Se connecter"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_margin="20dp"
-            android:layout_gravity="center"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btninscription"
-            android:layout_width="wrap_content"
+            android:layout_width="171dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:text="S'inscrire"
-            android:background="@color/teal_700"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_margin="20dp"
-            android:layout_gravity="center"/>
+            android:textStyle="bold" />
+
 
 
 
