--- a/app/src/main/res/layout/fragment_compte.xml
+++ b/app/src/main/res/layout/fragment_compte.xml
@@ -6,6 +6,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_notifications" />
+        android:text="@string/title_compte" />
 
+    <Button
+        android:id="@+id/btndeconnect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/deconnect" />
 </LinearLayout>
