--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_game">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.kidsbrain.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_game"
+        android:name="com.example.kidsbrain.activity.fragment.GameFragment"
+        android:label="@string/title_game"
+        tools:layout="@layout/fragment_game" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.kidsbrain.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_video"
+        android:name="com.example.kidsbrain.activity.fragment.VideoFragment"
+        android:label="@string/title_video"
+        tools:layout="@layout/fragment_video" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.kidsbrain.ui.notifications.NotificationsFragment"
+        android:name="com.example.kidsbrain.activity.fragment.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_compte"
+        android:name="com.example.kidsbrain.activity.fragment.CompteFragment"
+        android:label="@string/title_compte"
+        tools:layout="@layout/fragment_compte" />
 </navigation>
