--- a/app/src/main/res/layout/video_row.xml
+++ b/app/src/main/res/layout/video_row.xml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    <ImageView
-        android:layout_rowSpan="2"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    card_view:cardUseCompatPadding="true">
 
-        android:scaleType="fitXY"
-        android:id="@+id/videoViewFlag"
-        android:layout_row="0"
-        android:layout_column="0" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:layout_marginLeft="10dp"
-        android:textSize="30dp"
-        android:textColor="#1E90FF"
-        android:id="@+id/videoTitleView"
-        android:layout_row="0"
-        android:layout_column="1" />
+        >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:layout_marginLeft="10dp"
-        android:textSize="20dp"
-        android:textColor="#4B0082"
-        android:id="@+id/videoDescView"
-        android:layout_row="1"
-        android:layout_column="1" />
-</GridLayout>
+        <ImageView
+            android:id="@+id/videoViewFlag"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/videoTitleView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/videoViewFlag"
+            android:layout_marginLeft="16dp"
+            android:layout_columnWeight="1"
+            android:layout_marginStart="10dp"
+            android:textColor="#1E90FF"
+            android:textSize="30dp" />
+
+        <TextView
+            android:id="@+id/videoDescView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/videoViewFlag"
+            android:layout_marginLeft="16dp"
+            android:paddingTop="40dp"
+            android:layout_columnWeight="1"
+            android:textColor="#4B0082"
+            android:textSize="20dp" />
+
+
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
