--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.video.VideoPlay">
 
-    <!-- adding VideoView to the layout -->
-    <VideoView
-        android:id="@+id/videoView"
+    <com.brightcove.player.view.BrightcoveExoPlayerVideoView
+        android:id="@+id/brightcove_video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
-
+        android:layout_centerInParent="true"
+        android:configChanges="orientation|screenSize"
+        tools:ignore="MissingConstraints"
+        app:resize_mode="fill"/>
     <ProgressBar
-        android:id="@+id/videoProgress"
+        tools:ignore="MissingConstraints"
+        android:id="@+id/videoProgress2"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
