--- a/app/src/main/res/layout/fragment_compte.xml
+++ b/app/src/main/res/layout/fragment_compte.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="350dp"
         android:layout_weight="1"
         android:background="#15108F"
         android:orientation="horizontal">
@@ -50,7 +50,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="66dp"
+            android:layout_height="5dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -59,8 +59,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textColor="@color/white"
-                android:text="Antonio Rn" />
+                android:text="Antonio Rn"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </LinearLayout>
@@ -78,7 +78,7 @@
             android:background="#00018786">
 
             <LinearLayout
-                android:layout_width="536dp"
+                android:layout_width="350dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="horizontal">
@@ -116,7 +116,7 @@
             android:layout_weight="1">
 
             <LinearLayout
-                android:layout_width="539dp"
+                android:layout_width="350dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="horizontal">
@@ -125,12 +125,11 @@
                     android:id="@+id/textView18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-                    android:textColor="@color/white"
                     android:layout_marginLeft="60dp"
                     android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                     android:text="Prenom"
-                    />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -143,10 +142,9 @@
                     android:id="@+id/prenom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
                     android:layout_weight="1"
                     android:text="TextView"
-                    />
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
 
@@ -156,21 +154,20 @@
             android:layout_weight="1">
 
             <LinearLayout
-                android:layout_width="541dp"
+                android:layout_width="350dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView20"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                     android:layout_marginLeft="60dp"
                     android:layout_weight="1"
-                    android:text="Adresse email"
-                    android:textColor="@color/white"
-                    />
+                    android:drawableLeft="@android:drawable/sym_action_email"
+                    android:text="Email"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -181,11 +178,11 @@
 
                 <TextView
                     android:id="@+id/email"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
 
@@ -196,13 +193,13 @@
 
             <Switch
                 android:id="@+id/thene_mod"
-                android:layout_width="497dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
                 android:layout_weight="1"
-                android:text="LIGHT" />
+                android:text="Mode Sombre" />
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -210,22 +207,15 @@
 
             <Button
                 android:id="@+id/btndeconnect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+
+                android:layout_centerInParent="true"
                 android:text="@string/deconnect" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"></LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/title_compte" />
 
 </LinearLayout>
