--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -52,7 +52,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/game_text"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_weight="1"
@@ -118,7 +118,7 @@
                         android:layout_height="45dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Addition"
+                        android:text="Soustraction"
                         android:textColor="@color/cardview_dark_background"
                         android:textSize="25dp"
                         android:textStyle="bold" />
@@ -145,14 +145,14 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btnaddition5"
+                        android:id="@+id/btnsoustraction"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="Jouer" />
 
                     <Button
-                        android:id="@+id/btnadditioninfo5"
+                        android:id="@+id/btninfosoustraction"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -420,8 +420,8 @@
             </LinearLayout>
         </LinearLayout>
 
-</LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+</ScrollView>
 
 
 
