--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -15,7 +15,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:background="#15108F"
             android:orientation="horizontal">
@@ -134,7 +134,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/addition" />
+                        app:srcCompat="@drawable/_1w5wn4g2bl" />
 
                 </LinearLayout>
 
@@ -202,7 +202,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/addition" />
+                        app:srcCompat="@drawable/image" />
 
                 </LinearLayout>
 
@@ -247,7 +247,7 @@
                         android:layout_height="45dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Addition"
+                        android:text="Tic Tac Toe"
                         android:textColor="@color/cardview_dark_background"
                         android:textSize="25dp"
                         android:textStyle="bold" />
@@ -263,7 +263,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/addition" />
+                        app:srcCompat="@drawable/_1n_rfp5jtl" />
 
                 </LinearLayout>
 
@@ -274,143 +274,14 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btnaddition6"
+                        android:id="@+id/btntictactoe"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="Jouer" />
 
                     <Button
-                        android:id="@+id/btnadditioninfo6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Info" />
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="300dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Addition"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="25dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="420dp"
-                    android:layout_weight="1">
-
-                    <ImageView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/addition" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <Button
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Jouer" />
-
-                    <Button
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Info" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Addition"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="25dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="420dp"
-                    android:layout_weight="1">
-
-                    <ImageView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/addition" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <Button
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Jouer" />
-
-                    <Button
-
+                        android:id="@+id/btninfotictactoe"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
