--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -8,9 +8,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:background="#15108F"
             android:orientation="horizontal"
@@ -30,15 +31,15 @@
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/search_bar"
+                style="@style/SearchViewStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_margin="20dp"
-                android:background="#FCFAF9F9"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_marginBottom="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:searchHintIcon="?android:attr/actionModeWebSearchDrawable"
-                app:searchIcon="?android:attr/actionModeWebSearchDrawable" />
+                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.SearchView>
+
 
         </LinearLayout>
 
