--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".activity.video.VideoPlay">
 
     <com.brightcove.player.view.BrightcoveExoPlayerVideoView
@@ -12,8 +13,8 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:configChanges="orientation|screenSize"
-        tools:ignore="MissingConstraints"
-        app:resize_mode="fill"/>
+        app:resize_mode="fill"
+        tools:ignore="MissingConstraints" />
     <ProgressBar
         tools:ignore="MissingConstraints"
         android:id="@+id/videoProgress2"
